--- a/gym_cooking/config/record.yaml
+++ b/gym_cooking/config/record.yaml
@@ -11,25 +11,24 @@ env:
 seed: 1
 
 wandb_run: excited-seagull-123
-checkpoint: 60
+checkpoint: 100
 
 agents:
   agent_1:
     idx: 0
     wandb_run: ${wandb_run}
     checkpoint: ${checkpoint}
-    path: ${agents.agent_1.wandb_run}/model_${agents.agent_1.idx}_${agents.agent_1.checkpoint}.pt
+      #path: ${agents.agent_1.wandb_run}/model_${agents.agent_1.idx}_${agents.agent_1.checkpoint}.pt
+    path: models_new/xp/model_${agents.agent_1.idx}_${agents.agent_1.checkpoint}.pt
   agent_2:
-    idx: 0
+    idx: 3
     wandb_run: ${wandb_run}
     checkpoint: ${checkpoint}
-    path: ${agents.agent_2.wandb_run}/model_${agents.agent_2.idx}_${agents.agent_2.checkpoint}.pt
+    path: models_new/xp/model_${agents.agent_2.idx}_${agents.agent_2.checkpoint}.pt
+      #path: ${agents.agent_2.wandb_run}/model_${agents.agent_2.idx}_${agents.agent_2.checkpoint}.pt
 
 viz:
   render: false
   record: true
-  fps: 2
+  fps: 4
   video_save_name: output_${seed}.mp4
-
-
-
